Fix overflow problems in utils.css

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -9,6 +9,7 @@
 		margin: 0 auto;
 		padding: var(--gutter);
 		max-width: 1980px;
+		position: relative;
 	}
 	
 }
